# sovcombank_test_task

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: address_parser.py  main.py  save_to_sql.py  test_parsing.py  visualization.py
src/sql_queries/: create_tables.sql  first_sql_query.sql  second_sql_query.sql  third_sql_query.sql
