[project]
name = "sovcombank-test-task"
version = "1.0.0"
description = "Тестовое задание"
authors = [
    {name = "Pengu1Nus",email = "mustafin.zul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
