[project]
name = "sovcombank-test-task"
version = "1.0.0"
description = "Тестовое задание"
authors = [
    {name = "Pengu1Nus",email = "mustafin.zul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "natasha (==1.4.0)",
    "setuptools (==79.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
